fix: the filter input and sort button is too close

--- a/packages/webapp/src/components/UserStoryListPage/index.less
+++ b/packages/webapp/src/components/UserStoryListPage/index.less
@@ -1,9 +1,8 @@
 .user-story-list-page {
   .toolbar {
     margin-bottom: 20px;
-
-    .sort-button {
-      background-color: @input-group-addon-bg;
+    .clear-button {
+      background-color: @input-bg;
     }
   }
 }
